--- a/NuDataDb/NuDataDb.csproj
+++ b/NuDataDb/NuDataDb.csproj
@@ -1,7 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <Authors>MuMedics Dev Team</Authors>
+    <Company>NuMedics, Inc.</Company>
+    <Product>NuDataDb Library</Product>
+    <Description>.NET Core library for interacting with the NuMedicsGlobal database using Entity Framework</Description>
+    <Copyright>NuMedics 2017</Copyright>
+    <RepositoryUrl>http://ov-sharepoint:8080/tfs/NETCoreCollection/NuDataDb/</RepositoryUrl>
+    <RepositoryType>Git</RepositoryType>
+    <Version>1.0.0</Version>
+    <VersionPrefix>1.0.0.0</VersionPrefix>
+    <VersionSufix>Rel</VersionSufix>
+    <AssemblyVersion>1.0.0.1</AssemblyVersion>
+    <FileVersion>1.0.0.1</FileVersion>
   </PropertyGroup>
 
 </Project>
