--- a/NuDataDb/NuDataDb.csproj
+++ b/NuDataDb/NuDataDb.csproj
@@ -16,4 +16,10 @@
     <FileVersion>1.0.0.1</FileVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.0" />
+  </ItemGroup>
+
 </Project>
